# webify

./: .gitmodules  Cargo.toml  README.md  build.sh  run.sh
src/: autoban_service.rs  blog_device.rs  config.rs  dashboard.rs  database.rs  device_trait.rs  devices.rs  ecg_device.rs  file_cache.rs  file_device.rs  io_tools.rs  lib.rs  main.rs  models.rs  news_payload_parser.rs  printer_device.rs  root_device.rs  schema.rs  server.rs  shikimori_scraper.rs  stat_device.rs  stat_service.rs  template_cache.rs
static/: dashboard.css  lite.css  login.html  login_success.html  main.html  styles.css
styles/: dashboard.css  lite.css  styles.css
templates/: blog_new_post.hbs  blog_post_list.hbs  blog_post_view.hbs  dashboard.hbs  ecg_status.hbs  ecg_webapp.hbs  file_device.hbs  file_device.html  printer_device.hbs  printer_device.html  printer_table.hbs  printer_table.html  root_groups_table.hbs  root_groups_table.html  root_history_table.hbs  root_history_table.html  root_status.hbs  root_users_table.hbs  sender_error.hbs  simple_message.hbs  stat_chart.hbs  stat_cross_chart.hbs  stat_status.hbs  upload.hbs
templates/json/: chart_cmd_cross_user.hjs  chart_command.hjs  chart_device.hjs  chart_device_cross_user.hjs  chart_user.hjs
