[package]
name = "webify"
version = "0.5.0-beta"
authors = ["thomasfire <tomasfire@live.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.*", features=["rustls"] }
actix-identity = "0.3.*"
actix-form-data = "0.5.*"
actix-multipart = "0.3.*"
actix-rt = "1.1.*"
toml = "0.5.*"
serde_derive = "1.0.*"
serde_json = "1.0"
serde = "1.0.*"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
chrono = "0.4.*"
futures = "0.3.*"
rust-crypto = "0.2.*"
rand = "0.8.*"
flate2 = "1.0"
rustls = "0.18.1"
redis = { version = "0.19.*", features = ["r2d2"] }
r2d2_redis = { git = "https://github.com/thomasfire/r2d2-redis.git" }
regex = "1.4.*"
scraper = "0.12.*"
reqwest = { version = "0.10.*", features = ["blocking"] }
handlebars = "4.1.*"
env_logger = "0.9.*"
log = "0.4.*"